typescript/checker/tests/conformance/parser/ecmascript5/Statements/parserWithStatement2.ts.stderr
error: With statement are not allowed in strict mode
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/parserWithStatement2.ts:1:1
  |
1 | with (1)
  | ^^^^

